# The-AI-Engineer-Challenge

./: .gitignore  .vercelignore  Accessing_GPT_4_1_nano_Like_a_Developer.ipynb  MERGE.md  Merge.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run-local.sh  tmp.html  vercel.json
.cursor/rules/: frontend-rule.mdc  general-rule.mdc  readme-rule.mdc
.github/workflows/: ci.yaml  e2e.yaml
aimakerspace/: aimakerspace
api/: README.md  SETUP.md  app.py  requirements.txt  sample_prd.txt  startup_pdf_loader.py
api/models/: chat.py  document.py
api/services/: pdf_service.py  rag_service.py
api/utils/: vector_store.py
docs/: HW1_VIBE_CHECK.md  HW3.md  PLAN.md
frontend/: .editorconfig  .gitignore  README.md  biome.json  eslint.config.mjs  index-cdn.html  install_deps.sh  kids_tutor.db  next-env.d.ts  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  prettier.config.js  setup.sh  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/.next/: trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiKeyModal.tsx  ApiKeySetup.tsx  ChatInterface.tsx  ChatMessage.tsx  MessageBubble.tsx  PDFUpload.tsx  StudyInterface.tsx  TopicSelector.tsx  index.ts
frontend/data/: kids_tutor.db
frontend/lib/: db.ts
frontend/pages/: _app.tsx  index.tsx
frontend/public/: index.html  manifest.json
frontend/services/: studyStorage.ts
frontend/src/: App.css  App.js  App.tsx  constants.ts  middleware.ts
scripts/: generate_pdfs.py  populate_pdf_metadata.ts  test_db.ts
(+94 files in other folders)
